--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     <header>
         <h1><i class="fas fa-server icon"></i>IK Adapter Hub v4.5</h1>
         <p style="color: var(--text-secondary); font-size: 0.9em; font-family: 'Inter', sans-serif;">Профессиональное управление для образовательных учреждений России</p>
-        <a href="https://t.me/your_tg_group" target="_blank" class="neon-button"><i class="fab fa-telegram-plane icon"></i>Telegram</a>
+        <a href="https://t.me/+adPPgY3JBpVmNzM6" target="_blank" class="neon-button"><i class="fab fa-telegram-plane icon"></i>Telegram</a>
     </header>
 
     <section id="home" class="hero">
