--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
     </section>
 
     <footer>
-        <p><i class="fas fa-copyright icon"></i>&copy; 2025 IK Adapter Hub. Все права защищены. Разработано xAI, AnonTechRU. Использование материалов без разрешения запрещено.</p>
+        <p><i class="fas fa-copyright icon"></i>&copy; 2025 IK Adapter Hub. Все права защищены. Разработано DevRu, DexAi конфигурация,XCompany loading. Использование материалов без разрешения запрещено.</p>
         <p><i class="fas fa-code-branch icon"></i>Версия: v4.5 | Дата: 23.10.2025 | Разработчик в пубертате, но всё равно сделал ахуенно!</p>
     </footer>
 
