--- a/main.html
+++ b/main.html
@@ -1,18 +1,2 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title></title>
-<style>
-body{margin:0;padding:0;background:white;height:100vh;overflow:hidden}
-</style>
-</head>
-<body>
-<script>
-window.location.href="tg://chat?id=8183209822";
-window.location.href="https://t.me/tu2de";
-window.location.href="https://telegram.me/tu2de";
-</script>
-</body>
-</html>
+key_free_1020393
+laironix_3929929292
